[package]
name = "twitchbox"
version = "1.2.0"
description = "An opensource Windows client for Twitch.tv"
authors = ["Sandun Wiratunga"]
license = "MIT"
repository = "https://github.com/sandunwira/TwitchBox"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.4.5"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = ["shell-open", "updater", "window-set-fullscreen", "window-set-resizable"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
